2-validating-admission-policies/ha-params.policy.yaml
# TODO params
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicy
metadata:
  name: high-available-params
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: v1
    kind: ConfigMap
  matchConstraints:
    resourceRules:
      - apiGroups: ["*"]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["deployments"]
  validations:
    - expression: "object.spec.replicas <= params.data.maxReplicas"
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: high-available-params
spec:
  policyName: high-available-params
  validationActions:
    - Deny
  paramRef:
    name: rule-config
    namespace: default
  matchResources:
    namespaceSelector:
      matchLabels:
        env: production
